--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,18 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/CSS/style.css">
     <title>Header Responsive</title>
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="" alt="">
-        </div>
-        <div class="toggle">
-            &#9776;
-        </div>
-        <nav>
-            <ul>
+        <nav class="nav-container">
+            <div> <a class="logo" href="#logo">Logo</a></div>
+            <div class="toggle"> &#9776;</div>
+            <ul class="nav-ul">
                 <li class="nav__item"><a href="#home">Home</a></li>
                 <li class="nav__item"><a href="#about">About</a></li>
                 <li class="nav__item"><a href="#skills">Skills</a></li>
@@ -23,10 +20,10 @@
                 <li class="nav__item"><a href="#contact">Contact</a></li>
             </ul>
         </nav>
-        <div>
-            <img src="../Img/pexels-g-cortez-6419779.jpg" alt="Building">
-            <h1>Welcome to our company</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <div class="container">
+            <h1 class="title">Welcome to our company</h1>
+            <p class="loren">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <a class="button" href="#">Acess</a>
         </div>
     </header>
     
